Add a lot of files to gitignore which have started to clutter the root directory.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,11 @@ projectile-bookmarks.eld
 ido.last
 smex-items
 speed-type
+session*
+recentf
+workspace/*
+eclipse.jdt.ls/*
+.emacs-buffers
+.lsp-session*
+.last-package-update-day
+network-security.data
